# tracing-tree

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
examples/: basic.rs  basic.stdout  basic_non_verbose.rs  basic_non_verbose.stdout  basic_verbose_entry.rs  basic_verbose_entry.stdout  basic_verbose_exit.rs  basic_verbose_exit.stdout  concurrent.rs  concurrent.stdout  concurrent_eager.rs  concurrent_eager.stdout  concurrent_verbose.rs  concurrent_verbose.stdout  deferred.rs  deferred.stdout  no-indent.rs  no-indent.stdout  quiet.rs  quiet.stdout  stderr.rs  stderr.stderr  wraparound.rs  wraparound.stdout
src/: format.rs  lib.rs  time.rs
test_dependencies/: Cargo.toml
tests/: format_time.rs  recursive_event.rs  ui.rs
