[package]
name = "tracing-tree"
version = "0.2.3"
authors = ["David Barsky <me@davidbarsky.com>", "Nathan Whitaker"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Tracing Layer which prints a tree of spans and events."
repository = "https://github.com/davidbarsky/tracing-tree"
readme = "README.md"

[dependencies]
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "fmt",
    "std",
] }
nu-ansi-term = "0.46.0"
is-terminal = "0.4.7"
tracing-log = { version = "0.1", optional = true }
time = { version = "0.3.20", optional = true, features = [
    "formatting",
    "local-offset",
] }

[features]
default = ["tracing-log"]

[dev-dependencies]
tracing = "0.1"
glob = "0.3"
ui_test = "0.7"
futures = "0.3"
log = "0.4"

[[test]]
name = "ui"
harness = false
