[package]
name = "test_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tracing = "0.1"
glob = "0.3"
log = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "fmt",
    "std",
] }
tracing-tree = { path = ".." }
tracing-log = "0.1"
