[package]
name = "test_dependencies"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",  
] }
glob = "0.3"
log = "0.4"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "fmt",
    "std",
] }
tracing-tree = { path = ".." }
tracing-log = { version = "0.2", default-features = false, features = [
    "log-tracer",
    "std",
] }
